fix the hero z-index issue

--- a/assets/sass/modules/content-blocks/_hero.scss
+++ b/assets/sass/modules/content-blocks/_hero.scss
@@ -2,6 +2,7 @@
 // Hero Block
 //--------------------------------------------------------------
 .hero {
+	margin-bottom: 0;
 	overflow-y: hidden;
 	position: relative;
 	z-index: 1;
